<resources>
    <string name="app_name">VinylApp</string>
    <string name="welcome">Welcome to VinylApp</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Vinylapp</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="textView3">VinylApp is a personal vinyl collection app under development. You will be able to add and share your vinyls with other collectors all over the world.
</string>
    <string name="next_button">Next</string>
    <string name="show_button">Show Collection</string>
    <string name="Vinilapp">vinylapp</string>
    <string name="vinily_collection">My Collection</string>
    <string name="epName">Name EP</string>
    <string name="epArtist">Name Artist</string>
    <string name="epCode">Cod.EP</string>
    <string name="epYear">Year </string>
    <string name="overview">Description:</string>
    <string name="overview_info">inin</string>
    <string name="add_button">Add new vinyl</string>
    <string name="add_vinyl">Add Vinyl</string>

</resources>