<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin"
        android:text="@string/Vinilapp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_below="@+id/textView2"
        android:layout_centerInParent="true"
        android:text="@string/textView3"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:src="@drawable/ic_vinylapp" />

    <Button
        android:id="@+id/show_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/show_button" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_btn"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/add_button" />

</RelativeLayout>