<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/padding_cardView">

    <ImageView
        android:id="@+id/vinyl_img"
        android:layout_width="@dimen/img_card"
        android:layout_height="@dimen/img_card"
        android:elevation="@dimen/elevationImg_card"
        android:src="@drawable/ic_red_rooster" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/MarginStart_card"
        android:backgroundTint="@color/grey"
        app:cardCornerRadius="@dimen/cornerCard"
        app:cardElevation="@dimen/elevation_card">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginStart_text"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameEp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/epName"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeText_title"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/nameArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEp"
                android:text="@string/epArtist"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeText_sub_title" />

            <TextView

                android:id="@+id/codeEp"
                android:layout_toEndOf="@+id/yearEp"
                android:layout_below="@+id/nameArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/epCode"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeText_sub_title" />

            <TextView

                android:id="@+id/yearEp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameArtist"
                android:text="@string/epYear"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeText_sub_title" />


        </RelativeLayout>




    </androidx.cardview.widget.CardView>


</LinearLayout>